# Spotify-Lyrics

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
ui/: index.html  renderer.js
