[package]
name = "spotify-lyrics"
version = "1.0.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["net", "io-util", "time"] }
open = "5"
urlencoding = "2"
regex = "1"
futures = "0.3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
